Closed Bug 204028 Opened 22 years ago Closed 22 years ago

debugger service crashes when asked to eval an empty string

Categories

(Other Applications Graveyard :: Venkman JS Debugger, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rginda, Assigned: rginda)

Details

(Keywords: crash)

Attachments

(1 file)

patch coming up.
Attachment #122183 - Flags: approval1.4b?
Keywords: crash
Comment on attachment 122183 [details] [diff] [review] check for an empty string a=sspitzer
Attachment #122183 - Flags: approval1.4b? → approval1.4b+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verify fixed using linux venkman 0.9.75 (trunk build id: 2003051922).
Status: RESOLVED → VERIFIED
Product: Core → Other Applications
Product: Other Applications → Other Applications Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: