Bug 204028, "debugger service crashes when asked to eval an empty string" a=sspitzer@netscape.com

return NS_ERROR_INVALID_ARG if asked to eval an empty string